[gd_scene load_steps=7 format=3 uid="uid://bq2ff72a2s2wu"]

[ext_resource type="Script" uid="uid://dduhq5c0xkrue" path="res://Escenas/enemy_aparicion.gd" id="1_ievrw"]
[ext_resource type="Texture2D" uid="uid://bxifr4oaxteji" path="res://tiles de prueba/tiles/Arte/Props_Luz/Caja_3_Luz.png" id="2_u21hq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ievrw"]
height = 40.6667

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_llbdb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ievrw"]
size = Vector2(210, 29)

[sub_resource type="CircleShape2D" id="CircleShape2D_u21hq"]
radius = 19.0263

[node name="Enemy_aparicion" type="CharacterBody2D"]
modulate = Color(0.156723, 0.200055, 0.207698, 1)
script = ExtResource("1_ievrw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, 4.76837e-07)
scale = Vector2(0.625, 0.9375)
texture = ExtResource("2_u21hq")

[node name="Area_pinchos" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area_pinchos"]
position = Vector2(0, 4)
scale = Vector2(0.8, 0.8)
shape = SubResource("CapsuleShape2D_ievrw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_llbdb")

[node name="RayCast2D_IZQ" type="RayCast2D" parent="."]
target_position = Vector2(-13, 0)

[node name="RayCast2D_DER" type="RayCast2D" parent="."]
target_position = Vector2(13, 0)

[node name="Area_detectar_player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_detectar_player"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ievrw")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_u21hq")

[connection signal="body_entered" from="Sprite2D/Area_pinchos" to="." method="_on_area_pinchos_body_entered"]
[connection signal="body_entered" from="Area_detectar_player" to="." method="_on_area_detectar_player_body_entered"]
[connection signal="body_exited" from="Area_detectar_player" to="." method="_on_area_detectar_player_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
